--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "netjsonmon",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": {
+    "netjsonmon": "dist/index.js"
+  },
   "directories": {
     "doc": "docs"
   },
@@ -20,13 +23,21 @@
     "node": ">=20.0.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^1.2.0"
   },
   "dependencies": {
-    "playwright": "^1.57.0",
-    "commander": "^12.0.0"
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
+    "commander": "^12.0.0",
+    "cosmiconfig": "^9.0.0",
+    "js-yaml": "^4.1.1",
+    "open": "^11.0.0",
+    "ora": "^9.0.0",
+    "playwright": "^1.57.0"
   }
 }
