--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "node --loader ts-node/esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
