--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "boxen": "^8.0.1",
+    "build": "^0.1.4",
     "chalk": "^5.6.2",
     "cli-table3": "^0.6.5",
     "commander": "^12.0.0",
