--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "^12.0.0",
     "cosmiconfig": "^9.0.0",
     "js-yaml": "^4.1.1",
+    "onnxruntime-node": "^1.15.0",
     "open": "^11.0.0",
     "ora": "^9.0.0",
     "playwright": "^1.57.0"
