--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.27.0",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "cli-table3": "^0.6.5",
@@ -39,6 +40,8 @@
     "onnxruntime-node": "^1.15.0",
     "open": "^11.0.0",
     "ora": "^9.0.0",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
