--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "netjsonmon",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
     "netjsonmon": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "directories": {
     "doc": "docs"
   },
@@ -13,12 +18,24 @@
     "dev": "node --loader ts-node/esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "vitest run"
+    "test": "vitest run",
+    "prepublishOnly": "npm run build && npm test"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MrRolie/netjsonmon.git"
+  },
+  "homepage": "https://github.com/MrRolie/netjsonmon#readme",
+  "bugs": {
+    "url": "https://github.com/MrRolie/netjsonmon/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=20.0.0"
   },
